[1.9.13]
- GWT: Key codes set with Gdx.input.setCatchKey prevent default browser behaviour
- Added Scaling.contain mode: Scales the source to fit the target while keeping the same aspect ratio, but the source is not scaled at all if smaller in both directions.
- API Addition: Added hasContents() to Clipboard interface, to reduce clipboard notifications on iOS 14

[1.9.12]
- [BREAKING CHANGE] iOS: Changed how Retina/hdpi handled on iOS. See #3709.
- [BREAKING CHANGE] API Change: InputProcessor scrolled method now receives scroll amount for X and Y. Changed type to float to support devices which report fractional scroll amounts. Updated InputEvent in scene2d accordingly: added scrollAmountX, scrollAmountY attributes and corresponding setters and getters. See #6154.
- [BREAKING CHANGE] API Change: Vector2 angleRad(Vector2) now correctly returns counter-clockwise angles. See #5428
- [BREAKING CHANGE] Android: getDeltaTime() now returns the raw delta time instead of a smoothed one. See #6228.
- Fixed vertices returned by Decal.getVertices() not being updated
- Fixes Issue #5048. The function Intersector.overlapConvexPolygons now should return the right minimum translation vector values.
- Update to MobiVM 2.3.11
- API Change: Removed Pool constructor with preFill parameter in favor of using Pool#fill() method. See #6117
- API Addition: Slider can now be configured to only trigger on certain mouse button clicks (Slider#setButton(int)).
- Fixed GlyphLayout not laying out correctly with color markup.
- Fixed TileDrawable not applying its scale correctly.
- API Addition: Added epsilon methods to maps with float values.
- API Addition: Added an insertRange method to array collections.
- Fixed GestureDetector maxFlingDelay.
- API Change: Changed default GestureDetector maxFlingDelay to Integer.MAX_VALUE (didn't work before, this matches that).
- Gdx.files.external on Android now uses app external storage - see wiki article File handling for more information