@@ -12,6 +12,7 @@ import javax.swing.JLabel;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 
+import com.badlogic.gdx.graphics.GL20;
 import com.badlogic.gdx.graphics.g3d.particles.ParticleShader.AlignMode;
 import com.badlogic.gdx.graphics.g3d.particles.ParticleSorter;
 import com.badlogic.gdx.graphics.g3d.particles.batches.BillboardParticleBatch;
@@ -53,10 +54,36 @@ public class BillboardBatchPanel extends EditorPanel<BillboardParticleBatch> {
 		}
 	}
 	
+	private enum BlendFunction {
+		ZERO(GL20.GL_ZERO),
+		ONE(GL20.GL_ONE),
+		SRC_ALPHA(GL20.GL_SRC_ALPHA),
+		SRC_COLOR(GL20.GL_SRC_COLOR),
+		DST_ALPHA(GL20.GL_DST_ALPHA),
+		DST_COLOR(GL20.GL_DST_COLOR),
+		ONE_MINUS_SRC_COLOR(GL20.GL_ONE_MINUS_SRC_COLOR),
+		ONE_MINUS_SRC_ALPHA(GL20.GL_ONE_MINUS_SRC_ALPHA),
+		ONE_MINUS_DST_COLOR(GL20.GL_ONE_MINUS_DST_COLOR),
+		ONE_MINUS_DST_ALPHA(GL20.GL_ONE_MINUS_DST_ALPHA);
+
+		public int blend;
+
+		private BlendFunction (int blend) {
+			this.blend = blend;
+		}
+
+		public static BlendFunction find (int function) {
+			for (BlendFunction func : values()) {
+				if (func.blend == function) return func;
+			}
+			return null;
+		}
+	}
 
 	JComboBox alignCombo;
 	JCheckBox useGPUBox;
 	JComboBox sortCombo;
+	JComboBox srcBlendFunction, destBlendFunction;
 
 	public BillboardBatchPanel (FlameMain particleEditor3D, BillboardParticleBatch renderer) {
 		super(particleEditor3D, "Billboard Batch", "Renderer used to draw billboards particles.");
@@ -95,20 +122,51 @@ public class BillboardBatchPanel extends EditorPanel<BillboardParticleBatch> {
 				editor.getBillboardBatch().setSorter(mode.sorter);
 			}
 		});
-		
-		int i =0;
-		contentPanel.add(new JLabel("Align"), new GridBagConstraints(0, i, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE,
-			new Insets(6, 0, 0, 0), 0, 0));
-		contentPanel.add(alignCombo, new GridBagConstraints(1, i++, 1, 1, 1, 0, GridBagConstraints.WEST, GridBagConstraints.NONE,
-			new Insets(6, 0, 0, 0), 0, 0));
-		contentPanel.add(new JLabel("Use GPU"), new GridBagConstraints(0, i, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE,
-			new Insets(6, 0, 0, 0), 0, 0));
-		contentPanel.add(useGPUBox, new GridBagConstraints(1, i++, 1, 1, 1, 0, GridBagConstraints.WEST, GridBagConstraints.NONE,
-			new Insets(6, 0, 0, 0), 0, 0));
-		contentPanel.add(new JLabel("Sort"), new GridBagConstraints(0, i, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE,
-			new Insets(6, 0, 0, 0), 0, 0));
-		contentPanel.add(sortCombo, new GridBagConstraints(1, i, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE,
-			new Insets(6, 0, 0, 0), 0, 0));
+
+		// Blending source
+		srcBlendFunction = new JComboBox();
+		srcBlendFunction.setModel(new DefaultComboBoxModel(BlendFunction.values()));
+		srcBlendFunction.setSelectedItem(BlendFunction.find(renderer.getBlendingAttribute().sourceFunction));
+		srcBlendFunction.addActionListener(new ActionListener() {
+			public void actionPerformed (ActionEvent event) {
+				BlendFunction blend = (BlendFunction)srcBlendFunction.getSelectedItem();
+				editor.getBillboardBatch().getBlendingAttribute().sourceFunction = blend.blend;
+			}
+		});
+
+		// Blending destination
+		destBlendFunction = new JComboBox();
+		destBlendFunction.setModel(new DefaultComboBoxModel(BlendFunction.values()));
+		destBlendFunction.setSelectedItem(BlendFunction.find(renderer.getBlendingAttribute().destFunction));
+		destBlendFunction.addActionListener(new ActionListener() {
+			public void actionPerformed (ActionEvent event) {
+				BlendFunction blend = (BlendFunction)destBlendFunction.getSelectedItem();
+				editor.getBillboardBatch().getBlendingAttribute().destFunction = blend.blend;
+			}
+		});
+
+		int i = 0;
+		Insets insets = new Insets(6, 0, 0, 0);
+		contentPanel.add(new JLabel("Align"),
+			new GridBagConstraints(0, i, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE, insets, 0, 0));
+		contentPanel.add(alignCombo,
+			new GridBagConstraints(1, i++, 1, 1, 1, 0, GridBagConstraints.WEST, GridBagConstraints.NONE, insets, 0, 0));
+		contentPanel.add(new JLabel("Use GPU"),
+			new GridBagConstraints(0, i, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE, insets, 0, 0));
+		contentPanel.add(useGPUBox,
+			new GridBagConstraints(1, i++, 1, 1, 1, 0, GridBagConstraints.WEST, GridBagConstraints.NONE, insets, 0, 0));
+		contentPanel.add(new JLabel("Sort"),
+			new GridBagConstraints(0, i, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE, insets, 0, 0));
+		contentPanel.add(sortCombo,
+			new GridBagConstraints(1, i++, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE, insets, 0, 0));
+		contentPanel.add(new JLabel("Blending Src"),
+			new GridBagConstraints(0, i, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE, insets, 0, 0));
+		contentPanel.add(srcBlendFunction,
+			new GridBagConstraints(1, i++, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE, insets, 0, 0));
+		contentPanel.add(new JLabel("Blending Dest"),
+			new GridBagConstraints(0, i, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE, insets, 0, 0));
+		contentPanel.add(destBlendFunction,
+			new GridBagConstraints(1, i++, 1, 1, 0, 0, GridBagConstraints.WEST, GridBagConstraints.NONE,insets, 0, 0));
 	}
 
 	private Object getSortMode (ParticleSorter sorter) {
